--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -25,10 +25,10 @@
     </string-array>
 
     <string-array name="default_view_texts" translatable="false">
-        <item>@string/settings_default_view_framework</item>
-        <item>@string/settings_default_view_modules</item>
-        <item>@string/settings_default_view_downloads</item>
-        <item>@string/settings_default_view_logs</item>
+        <item>@string/nav_item_install</item>
+        <item>@string/nav_item_modules</item>
+        <item>@string/nav_item_download</item>
+        <item>@string/nav_item_logs</item>
     </string-array>
 
     <string-array name="theme_values" translatable="false">
